# dosbox-staging-ANSI-server

./: .dirtree-state  AGENTS.md  CMakeLists.txt  PROJECT_PLAN.md  README.md  build_dev  build_release  flake.nix  meson.build  test
extras/windows-installer/: .gitattributes  DOSBox-Staging-setup.iss  dosbox_with_console.bat
src/: CMakeLists.txt  dosbox.cpp
src/gui/: sdlmain.cpp
src/misc/: messages.cpp
src/textmode_server/: command_processor.cpp  command_processor.h  encoder.cpp  encoder.h  keyboard_processor.cpp  keyboard_processor.h  memory_access.cpp  memory_access.h  queued_type_action_sink.cpp  queued_type_action_sink.h  server.cpp  server.h  service.cpp  service.h  snapshot.cpp  snapshot.h  textmode_server.cpp  textmode_server.h
tests/: CMakeLists.txt  meson.build  textmode_command_processor_tests.cpp  textmode_encoding_tests.cpp  textmode_keyboard_processor_tests.cpp  textmode_memory_access_tests.cpp  textmode_roundtrip_tests.cpp  textmode_server_api_tests.cpp  textmode_server_config_tests.cpp  textmode_server_tcp_tests.cpp  textmode_service_tests.cpp  textmode_snapshot_tests.cpp  textmode_type_queue_tests.cpp
tests/files/textmode/: memprobe.com
website/: mkdocs.yml
website/docs/getting-started/: textmode-server.md
