add_subdirectory(audio)
add_subdirectory(capture)
add_subdirectory(config)
add_subdirectory(cpu)
add_subdirectory(debugger)
add_subdirectory(dos)
add_subdirectory(fpu)
add_subdirectory(gui)
add_subdirectory(hardware)
add_subdirectory(ints)
add_subdirectory(libs)
add_subdirectory(midi)
add_subdirectory(network)
add_subdirectory(misc)
add_subdirectory(shell)
add_subdirectory(utils)

if(OPT_TESTS)
    target_sources(dosbox_tests PRIVATE
        dosbox.cpp
        textmode_server/textmode_server.cpp
        textmode_server/snapshot.cpp
        textmode_server/encoder.cpp
        textmode_server/service.cpp
        textmode_server/keyboard_processor.cpp
        textmode_server/server.cpp
        textmode_server/command_processor.cpp
    )
endif()
